src/test/deca/codegen/valid/mod_mult_var.deca
// Description:
//    test simple d'un mod
//
// Resultats:
//  1
//
//
// Historique:
//    cree le 14/01/2017
{
  int x = 10;
  int y = 3;
  x = x % y;
    print(x);
}
