src/test/deca/codegen/invalid/modulo_zero_int_ob.deca
// Description:
//    modulo 0
//
// Resultats:
//  erreur
//
// Historique:
//    cree le 23/01/2017

class A{
  int mod(int x,int y){
    return x%y;
  }
}
{
A test = new A();
print(test.mod(1,0));
}
